--- a/King_of_the_Hill/King_of_the_Hill/MainWindow.xaml
+++ b/King_of_the_Hill/King_of_the_Hill/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:King_of_the_Hill"
         xmlns:renderer="clr-namespace:King_of_the_Hill.Renderer.Display"
         mc:Ignorable="d"
-        Title="MainWindow" Height="900" Width="1600">
+        Title="MainWindow" Height="900" Width="1600" KeyDown="Window_KeyDown">
     <Grid>
         <renderer:Display x:Name="display"/>
     </Grid>
