--- a/King_of_the_Hill/King_of_the_Hill/MainWindow.xaml
+++ b/King_of_the_Hill/King_of_the_Hill/MainWindow.xaml
@@ -6,8 +6,8 @@
         xmlns:local="clr-namespace:King_of_the_Hill"
         xmlns:renderer="clr-namespace:King_of_the_Hill.Renderer.Display"
         mc:Ignorable="d"
-        Title="MainWindow" Height="900" Width="1600" KeyDown="Window_KeyDown" Loaded="Window_Loaded">
-    <Grid>
+        Title="King of the Hill" Height="900" Width="1600" ResizeMode="NoResize" Loaded="Window_Loaded" KeyDown="Window_KeyDown" SizeChanged="Window_SizeChanged">
+    <Grid x:Name="grid">
         <renderer:Display x:Name="display"/>
     </Grid>
 </Window>
