--- a/King_of_the_Hill/King_of_the_Hill/MainWindow.xaml
+++ b/King_of_the_Hill/King_of_the_Hill/MainWindow.xaml
@@ -20,9 +20,9 @@
                 </Grid.ColumnDefinitions>
                 <StackPanel Grid.Column="0" Orientation="Horizontal">
                     <Label Content="HP" FontSize="50" Margin="0,0,25,0"/>
-                    <ProgressBar Value="50" Maximum="100" Width="250" Margin="15"/>
+                    <ProgressBar x:Name="progressbar_hp" Value="50" Maximum="100" Width="250" Margin="15"/>
                     <Label Content="| Armor" FontSize="50" Margin="0,0,25,0"/>
-                    <ProgressBar Value="50" Maximum="100" Width="250" Margin="15"/>
+                    <ProgressBar x:Name="progressbar_armor" Value="50" Maximum="100" Width="250" Margin="15"/>
                 </StackPanel>
                 <Grid Grid.Column="1">
                     <Grid.RowDefinitions>
@@ -35,7 +35,7 @@
                         <ColumnDefinition Width="1*"/>
                         <ColumnDefinition Width="1*"/>
                     </Grid.ColumnDefinitions>
-                    <Label x:Name="label_slotOne" Content="0" Grid.Row="1" Grid.Column="0" FontSize="25" HorizontalContentAlignment="Center"/>
+                    <Label x:Name="label_slotOne" Content="N/A" Grid.Row="1" Grid.Column="0" FontSize="25" HorizontalContentAlignment="Center"/>
                     <Label x:Name="label_slotTwo" Content="0" Grid.Row="1" Grid.Column="1" FontSize="25" HorizontalContentAlignment="Center"/>
                     <Label x:Name="label_slotThree" Content="0" Grid.Row="1" Grid.Column="2" FontSize="25" HorizontalContentAlignment="Center"/>
                     <Label x:Name="label_slotFour" Content="0" Grid.Row="1" Grid.Column="3" FontSize="25" HorizontalContentAlignment="Center"/>
