--- a/King_of_the_Hill/King_of_the_Hill/MainWindow.xaml
+++ b/King_of_the_Hill/King_of_the_Hill/MainWindow.xaml
@@ -8,7 +8,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="900" Width="1600" ResizeMode="CanMinimize" KeyDown="Window_KeyDown" Loaded="Window_Loaded">
     <Grid>
-        <Grid x:Name="gamegrid" Visibility="Visible">
+        <Grid x:Name="gamegrid" Visibility="Hidden">
             <Grid.RowDefinitions>
                 <RowDefinition Height="1*"/>
                 <RowDefinition Height="9*"/>
@@ -30,8 +30,8 @@
                         <ColumnDefinition Width="1*"/>
                         <ColumnDefinition Width="1*"/>
                     </Grid.ColumnDefinitions>
-                    <Label x:Name="label_hp" Content="0" Grid.Row="1" Grid.Column="0" FontSize="25" HorizontalContentAlignment="Center"/>
-                    <Label x:Name="label_armor" Content="0" Grid.Row="1" Grid.Column="1" FontSize="25" HorizontalContentAlignment="Center"/>
+                    <Label x:Name="label_hp" Content="100" Grid.Row="1" Grid.Column="0" FontSize="25" HorizontalContentAlignment="Center"/>
+                    <Label x:Name="label_armor" Content="100" Grid.Row="1" Grid.Column="1" FontSize="25" HorizontalContentAlignment="Center"/>
                     <Label x:Name="label_hp_potion" Content="0" Grid.Row="1" Grid.Column="2" FontSize="25" HorizontalContentAlignment="Center"/>
                     <Label x:Name="label_armor_repairkit" Content="0" Grid.Row="1" Grid.Column="3" FontSize="25" HorizontalContentAlignment="Center"/>
                     <Label Content="ENTER" x:Name="label_enter" Visibility="Hidden" Grid.Row="1" Grid.Column="4" FontSize="25" HorizontalContentAlignment="Center"/>
